<resources>
    <string name="app_name">NotesIn</string>
    <string name="enter_secret_code">Enter your secret code</string>
    <string name="dot">⬤</string>
    <string name="enter_new_secret_code">Enter your new secret code</string>/*
    <string name="reenter_new_secret_code">Re-enter your new secret code</string>
    <string name="my_notes">My Notes</string>
    <string name="no_notes">No notes found!\n\nTap (+) icon to add a note</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="discard">Discard</string>
    <string name="share">Share</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>
    <string name="system_display">System Display Theme</string>
    <string name="system_display_info">Your app theme changes\naccording to the system display theme.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="secret_code">Secret Code</string>
    <string name="theme">Theme</string>
    <string name="type_note_title">Type in note title</string>
</resources>
