<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/d_x_black"
    android:orientation="vertical"
    android:padding="@dimen/d20"
    android:splitMotionEvents="false"
    tools:context=".activities.ChangeSecretCode">

    <ImageButton
        android:id="@+id/cp_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_r_white70"
        android:padding="@dimen/d15"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/cp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d50"
        android:layout_marginBottom="@dimen/d20"
        android:fontFamily="@font/bold"
        android:textColor="?attr/d_white_70"
        android:textSize="@dimen/t25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <include
            android:id="@+id/cp_old"
            layout="@layout/edittext_backspace" />

        <LinearLayout
            android:id="@+id/cp_newpasscode_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <include
                android:id="@+id/cp_new"
                layout="@layout/edittext_backspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d30"/>

            <include
                android:id="@+id/cp_newagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/edittext_backspace" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cp_0"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_0"
            android:textSize="@dimen/t20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cp_1"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_1"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_2"
            app:layout_constraintStart_toEndOf="@+id/cp_0"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cp_2"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_2"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_3"
            app:layout_constraintStart_toEndOf="@+id/cp_1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cp_3"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_3"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_4"
            app:layout_constraintStart_toEndOf="@+id/cp_2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cp_4"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_4"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cp_5"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:layout_marginTop="@dimen/d20"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_5"
            android:textSize="@dimen/t20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cp_0"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/cp_6"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_6"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_7"
            app:layout_constraintStart_toEndOf="@id/cp_5"
            app:layout_constraintTop_toTopOf="@id/cp_5" />

        <Button
            android:id="@+id/cp_7"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_7"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_8"
            app:layout_constraintStart_toEndOf="@+id/cp_6"
            app:layout_constraintTop_toTopOf="@id/cp_5" />

        <Button
            android:id="@+id/cp_8"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_8"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toStartOf="@id/cp_9"
            app:layout_constraintStart_toEndOf="@+id/cp_7"
            app:layout_constraintTop_toTopOf="@id/cp_5" />

        <Button
            android:id="@+id/cp_9"
            android:layout_width="@dimen/d60"
            android:layout_height="@dimen/d60"
            android:background="@drawable/btn_r_white25"
            android:fontFamily="@font/regular"
            android:textColor="@color/grey"
            android:text="@string/_9"
            android:textSize="@dimen/t20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cp_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>