<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/d30"
    android:background="?attr/d_x_black"
    android:splitMotionEvents="false"
    tools:context=".activities.SecretCode">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/enter_secret_code"
        android:textColor="?attr/d_white_70"
        android:textSize="@dimen/t25" />

    <EditText
        android:id="@+id/pc_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/d50"
        android:layout_marginTop="@dimen/d30"
        android:textColor="?attr/d_white_70"
        android:textSize="@dimen/t25"
        android:maxLines="1"
        android:enabled="false"
        android:cursorVisible="false"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pc_1"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_1"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintBottom_toTopOf="@id/pc_4"
            app:layout_constraintEnd_toStartOf="@+id/pc_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pc_2"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_2"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/pc_1" />

        <Button
            android:id="@+id/pc_3"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_3"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pc_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/pc_1" />

        <Button
            android:id="@+id/pc_4"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_4"
            android:layout_marginTop="@dimen/d30"
            android:layout_marginBottom="@dimen/d30"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintBottom_toTopOf="@+id/pc_7"
            app:layout_constraintEnd_toStartOf="@+id/pc_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pc_1" />

        <Button
            android:id="@+id/pc_5"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_5"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pc_4"
            app:layout_constraintBottom_toBottomOf="@+id/pc_4"/>

        <Button
            android:id="@+id/pc_6"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_6"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pc_5"
            app:layout_constraintTop_toTopOf="@+id/pc_4"
            app:layout_constraintBottom_toBottomOf="@+id/pc_4" />

        <Button
            android:id="@+id/pc_7"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_7"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintBottom_toTopOf="@id/pc_help"
            app:layout_constraintEnd_toStartOf="@+id/pc_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pc_4" />

        <Button
            android:id="@+id/pc_8"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_8"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/pc_7"
            app:layout_constraintBottom_toBottomOf="@id/pc_7" />

        <Button
            android:id="@+id/pc_9"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_9"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pc_8"
            app:layout_constraintTop_toTopOf="@id/pc_7"
            app:layout_constraintBottom_toBottomOf="@id/pc_7"/>

        <ImageButton
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:id="@+id/pc_help"
            android:layout_marginTop="@dimen/d30"
            app:srcCompat="@drawable/help"
            android:background="@color/trans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pc_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pc_7" />

        <Button
            android:id="@+id/pc_0"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@drawable/btn_r_white70"
            android:fontFamily="@font/regular"
            android:text="@string/_0"
            android:textColor="?attr/d_black"
            android:textSize="@dimen/t25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pc_help" />

        <ImageButton
            android:id="@+id/pc_back"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:background="@color/trans"
            app:srcCompat="@drawable/backspace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pc_0"
            app:layout_constraintTop_toTopOf="@+id/pc_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>