<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="?attr/d_x_black"
    android:splitMotionEvents="false"
    tools:context=".activities.Settings">

    <ImageButton
        android:id="@+id/se_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_r_white70"
        android:padding="@dimen/d15"
        android:layout_margin="@dimen/d20"
        app:srcCompat="@drawable/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/d30"
        android:layout_marginBottom="@dimen/d50"
        android:fontFamily="@font/bold"
        android:text="@string/settings"
        android:textColor="?attr/d_white_70"
        android:textSize="@dimen/t25" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/se_change_code"
        android:paddingStart="@dimen/d20"
        android:paddingEnd="@dimen/d20"
        android:paddingTop="@dimen/d25"
        android:paddingBottom="@dimen/d25"
        android:text="@string/change_secret_code"
        android:textSize="@dimen/t18"
        android:fontFamily="@font/bold"
        android:textColor="?attr/d_grey"
        android:background="?attr/d_white_25"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d2"
        android:layout_marginBottom="@dimen/d2"
        android:paddingStart="@dimen/d20"
        android:paddingEnd="@dimen/d20"
        android:paddingTop="@dimen/d25"
        android:paddingBottom="@dimen/d25"
        android:background="?attr/d_white_25">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/system_display"
            android:text="@string/system_display"
            android:textSize="@dimen/t18"
            android:layout_marginBottom="@dimen/d5"
            android:fontFamily="@font/bold"
            android:textColor="?attr/d_grey"
            android:layout_toStartOf="@id/se_system_display_switch"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_display_info"
            android:layout_below="@id/system_display"
            android:textSize="@dimen/t14"
            android:fontFamily="@font/regular"
            android:textColor="?attr/d_grey"
            android:layout_toStartOf="@id/se_system_display_switch"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/se_system_display_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/d10"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/se_dark_mode_view"
        android:orientation="horizontal"
        android:paddingStart="@dimen/d20"
        android:paddingEnd="@dimen/d20"
        android:paddingTop="@dimen/d25"
        android:paddingBottom="@dimen/d25"
        android:background="?attr/d_white_25"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            android:textSize="@dimen/t18"
            android:fontFamily="@font/bold"
            android:textColor="?attr/d_grey" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/se_dark_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d10"/>

    </LinearLayout>

</LinearLayout>